--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,4 +2,12 @@
   width: 100%;
   height: 200px;
   background-color: black;
+  display: grid;
+  justify-content: center;
+  box-shadow: 1px 2px 10px black;
+}
+
+.logo {
+  align-self: center;
+  width: 350px;
 }
