--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -7,6 +7,7 @@
   height: max-content;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 .card {
@@ -52,10 +53,18 @@
   z-index: 5;
 }
 
+.btn-container {
+  height: max-content;
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+}
 .log-out-btn {
   margin-top: 10%;
   margin-bottom: 10%;
-  width: 320px;
+  width: 350px;
+
   height: 35px;
   font-weight: bold;
   border: none;
