--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -14,7 +14,7 @@
 }
 
 .password {
-  margin-top: -15%;
+  margin-top: -5%;
 }
 
 .login-btn {
@@ -23,4 +23,10 @@
   height: 45px;
   color: #fff;
   background-color: #1e1e1e;
+}
+
+a {
+  background-color: aquamarine;
+  width: fit-content;
+  height: fit-content;
 }
