--- a/src/styles/TakedownsOffence.css
+++ b/src/styles/TakedownsOffence.css
@@ -5,3 +5,40 @@
   position: fixed;
   background-color: aquamarine;
 }
+
+.modal-header {
+  background-color: black;
+  width: 100%;
+  height: max-content;
+  text-align: center;
+  border-bottom: 2px solid #757675;
+  padding-bottom: 10px;
+}
+
+.modal-header h3 {
+  color: #fff;
+  margin-top: 5%;
+  font-size: 25px;
+}
+
+.back {
+  margin-right: 85%;
+  margin-top: 5%;
+  color: #fff;
+}
+
+.search-bar {
+  width: 75%;
+  height: 19%;
+  background: none;
+  border: none;
+  font-size: 18px;
+  color: #fff;
+}
+
+.search {
+  position: absolute;
+  color: #757675;
+  margin-left: -8%;
+  margin-top: 1%;
+}
