--- a/src/styles/TakedownsOffence.css
+++ b/src/styles/TakedownsOffence.css
@@ -3,7 +3,7 @@
   height: 105vh;
   z-index: 25;
   position: fixed;
-  background-color: aquamarine;
+  background-color: #d0213b;
 }
 
 .modal-header {
@@ -40,5 +40,21 @@
   position: absolute;
   color: #757675;
   margin-left: -8%;
-  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.modal-body {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.card1 {
+  margin-top: 5%;
+  text-align: left;
+  display: inline-block;
+  width: 96%;
+  height: 300px;
+  border-radius: 1.5%;
+  background-color: blanchedalmond;
 }
