--- a/src/styles/TakedownsOffence.css
+++ b/src/styles/TakedownsOffence.css
@@ -1,8 +1,8 @@
 .tk-off-box {
   width: 100vw;
-  height: 105vh;
-  z-index: 25;
-  position: fixed;
+  max-height: 150%;
+  z-index: 35;
+  position: absolute;
   background-color: #d0213b;
 }
 
@@ -45,16 +45,80 @@
 
 .modal-body {
   width: 100%;
-  height: 100%;
+  min-height: 900px;
   text-align: center;
 }
 
-.card1 {
+.play-btn {
+  color: #fff;
+  position: absolute;
+  z-index: 30;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 50px;
+}
+
+.video-pic {
+  z-index: 10;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.video-pic-layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 55%);
+  z-index: 20;
+}
+
+.name-container {
+  z-index: 20;
+  position: absolute;
+  width: 45%;
+  height: 10%;
+  border-radius: 5%, 0%, 0%, 0%;
+  background-color: #e6da16;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.name-container p {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.video-card {
   margin-top: 5%;
   text-align: left;
   display: inline-block;
-  width: 96%;
+  width: 95%;
   height: 300px;
-  border-radius: 1.5%;
   background-color: blanchedalmond;
+  box-shadow: 0.5px 0.5px 3px #0000004d;
+  position: relative;
+}
+
+.time-container {
+  position: absolute;
+  margin-top: auto;
+  z-index: 50;
+  width: 20%;
+  height: 10%;
+  background-color: #d0213b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  bottom: 0;
+  right: 0;
+}
+
+.time-container p {
+  font-weight: bold;
+  font-size: 15px;
+  color: #fff;
 }
