--- a/src/styles/TakedownsOffence.css
+++ b/src/styles/TakedownsOffence.css
@@ -77,7 +77,9 @@
 .name-container {
   z-index: 20;
   position: absolute;
-  width: 45%;
+  min-width: 45%;
+  max-width: max-content;
+  padding: 5px;
   height: 10%;
   border-radius: 5%, 0%, 0%, 0%;
   background-color: #e6da16;
