--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -2,6 +2,28 @@
   margin-bottom: 1%;
 }
 
+.add-container {
+  display: inline-block;
+  width: 95%;
+  margin-top: 5%;
+
+  background-color: rgb(0 0 0 / 55%);
+  border-radius: 3px;
+  height: fit-content;
+  text-align: center;
+  left: 0;
+  right: 0;
+}
+
+.add-container p {
+  color: #fff;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.add-icon {
+  margin-left: 2%;
+}
 .row {
   width: 100%;
   height: max-content;
